@@ -1,5 +1,7 @@
 2009-11-13  higepon  <higepon@users.sourceforge.jp>
 
+	* Symbol.cpp: intern becomes thread safe.
+
 	* NumberScanner.h : NumberScanner becomes pure parser, which means thread safe.
 
 	* Scanner.h : Scanner becomes pure parser, which means thread safe.
